<?xml version="1.0"?>
<package format="2">
  <name>gvins_feature_tracker</name>
  <version>0.0.0</version>
  <description>The feature_tracker package</description>
  <maintainer email="qintonguav@gmail.com">dvorak</maintainer>

  <license>TODO</license>


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gvins_camera_model</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gvins_camera_model</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
