<?xml version="1.0"?>
<package>
  <name>gvins_msgs</name>
  <version>0.0.0</version>
  <description>The gvins_msgs package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gnss_comm</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>gnss_comm</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
